Add path and url to machine-service.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ zuul.routes.user-service.path=/users/**
 zuul.routes.user-service.url=http://localhost:8090/users/
 zuul.routes.rent-service.path=/rents/**
 zuul.routes.rent-service.url=http://localhost:8095/rents/
-zuul.routes.rent-service.path=/machines/**
-zuul.routes.rent-service.url=http://localhost:8100/machines/
+zuul.routes.machine-service.path=/machines/**
+zuul.routes.machine-service.url=http://localhost:8100/machines/
 zuul.host.socket-timeout-millis=30000
